@@ -114,8 +114,8 @@ CGAlgorithms::isOnLine(const Coordinate& p, const CoordinateSequence* pt)
 {
 	RobustLineIntersector lineIntersector;
 	for(int i=1;i<pt->getSize();i++) {
-		Coordinate p0=pt->getAt(i-1);
-		Coordinate p1=pt->getAt(i);	
+		const Coordinate &p0=pt->getAt(i-1);
+		const Coordinate &p1=pt->getAt(i);	
 		lineIntersector.computeIntersection(p, p0, p1);
 		if (lineIntersector.hasIntersection()) {
 			return true;
@@ -370,6 +370,9 @@ double CGAlgorithms::length(const CoordinateSequence* pts) {
 
 /**********************************************************************
  * $Log$
+ * Revision 1.19.2.2  2005/05/23 17:29:11  strk
+ * Removed useless Coordinate copies in CGAlgorithms::isOnLine()
+ *
  * Revision 1.19.2.1  2005/05/23 17:10:08  strk
  * Stricter C++ syntax (math.h=>cmath, ieeefp.h in "C" block)
  *
